--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "p5.transparency",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "An addon for rendering objects with transparency in p5.js WebGL mode.",
   "main": "p5.transparency.js",
   "scripts": {
     "build": "minify p5.transparency.js > p5.transparency.min.js",
-    "publish": "npm publish --access public"
+    "publish": "npm run build && npm publish --access public"
   },
   "types": "p5.transparency.d.ts",
   "files": [
