--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "p5.transparency",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "An addon for rendering objects with transparency in p5.js WebGL mode.",
   "main": "p5.transparency.js",
   "scripts": {
-    "build": "minify p5.transparency.js > p5.transparency.min.js",
+    "build": "rollup -c",
     "publish": "npm run build && npm publish --access public"
   },
   "types": "p5.transparency.d.ts",
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/davepagurek/p5.transparency#readme",
   "devDependencies": {
-    "minify": "^13.0.0"
+    "rollup": "^4.0.0",
+    "@rollup/plugin-terser": "^0.4.0"
   }
 }
